Dara: Fix issues with widget block centre alignments.

--- a/dara/blocks.css
+++ b/dara/blocks.css
@@ -321,11 +321,13 @@ hr.wp-block-separator {
 5.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-.wp-block-archives.aligncenter,
 .wp-block-categories.aligncenter,
-.wp-block-latest-posts.aligncenter {
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
 	text-align: center;
 }
