--- a/dara/editor-blocks.css
+++ b/dara/editor-blocks.css
@@ -823,10 +823,11 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-.editor-styles-wrapper .wp-block-archives ul,
-.editor-styles-wrapper .wp-block-categories ul,
-.editor-styles-wrapper .wp-block-categories ul ul,
-.editor-styles-wrapper .wp-block-latest-posts ul {
+/* General Widget styles */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
 }
 
